src/parser.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Start: peg$parseStart };
  var peg$startRuleFunction = peg$parseStart;

  var peg$c0 = " ";
  var peg$c1 = "..";
  var peg$c2 = "\"";
  var peg$c3 = "'";
  var peg$c4 = "\\\"";
  var peg$c5 = "\\n";
  var peg$c6 = "\\t";
  var peg$c7 = "\\\\";
  var peg$c8 = "\\'";
  var peg$c9 = "is";
  var peg$c10 = "within";
  var peg$c11 = "(";
  var peg$c12 = ")";
  var peg$c13 = "now";
  var peg$c14 = "today";
  var peg$c15 = "tomorrow";
  var peg$c16 = "yesterday";
  var peg$c17 = "start";
  var peg$c18 = "of";
  var peg$c19 = "end";
  var peg$c20 = "days";
  var peg$c21 = "in";
  var peg$c22 = "as";
  var peg$c23 = "next";
  var peg$c24 = "previous";
  var peg$c25 = "prev";
  var peg$c26 = "at";
  var peg$c27 = "using";
  var peg$c28 = "weekday";
  var peg$c29 = "weekend";
  var peg$c30 = "Mon";
  var peg$c31 = "Tue";
  var peg$c32 = "Wed";
  var peg$c33 = "Thu";
  var peg$c34 = "Fri";
  var peg$c35 = "Sat";
  var peg$c36 = "Sun";
  var peg$c37 = "Monday";
  var peg$c38 = "Tuesday";
  var peg$c39 = "Wednesday";
  var peg$c40 = "Thursday";
  var peg$c41 = "Friday";
  var peg$c42 = "Saturday";
  var peg$c43 = "Sunday";
  var peg$c44 = "second";
  var peg$c45 = "seconds";
  var peg$c46 = "minute";
  var peg$c47 = "minutes";
  var peg$c48 = "hour";
  var peg$c49 = "hours";
  var peg$c50 = "day";
  var peg$c51 = "week";
  var peg$c52 = "weeks";
  var peg$c53 = "month";
  var peg$c54 = "months";
  var peg$c55 = "year";
  var peg$c56 = "years";
  var peg$c57 = "clamp";
  var peg$c58 = "roll";
  var peg$c59 = "strict";
  var peg$c60 = "ms";
  var peg$c61 = "s";
  var peg$c62 = "mo";
  var peg$c63 = ":";
  var peg$c64 = "10";
  var peg$c65 = "11";
  var peg$c66 = "12";
  var peg$c67 = "am";
  var peg$c68 = "pm";

  var peg$r0 = /^[a-zA-Z0-9_]/;
  var peg$r1 = /^[0-9]/;
  var peg$r2 = /^[+\-]/;
  var peg$r3 = /^[dhmwy]/;
  var peg$r4 = /^[1-9]/;

  var peg$e0 = peg$literalExpectation(" ", false);
  var peg$e1 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e2 = peg$literalExpectation("..", false);
  var peg$e3 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e4 = peg$literalExpectation("\"", false);
  var peg$e5 = peg$literalExpectation("'", false);
  var peg$e6 = peg$literalExpectation("\\\"", false);
  var peg$e7 = peg$literalExpectation("\\n", false);
  var peg$e8 = peg$literalExpectation("\\t", false);
  var peg$e9 = peg$literalExpectation("\\\\", false);
  var peg$e10 = peg$anyExpectation();
  var peg$e11 = peg$literalExpectation("\\'", false);
  var peg$e12 = peg$literalExpectation("is", false);
  var peg$e13 = peg$literalExpectation("within", false);
  var peg$e14 = peg$literalExpectation("(", false);
  var peg$e15 = peg$literalExpectation(")", false);
  var peg$e16 = peg$literalExpectation("now", false);
  var peg$e17 = peg$literalExpectation("today", false);
  var peg$e18 = peg$literalExpectation("tomorrow", false);
  var peg$e19 = peg$literalExpectation("yesterday", false);
  var peg$e20 = peg$literalExpectation("start", false);
  var peg$e21 = peg$literalExpectation("of", false);
  var peg$e22 = peg$literalExpectation("end", false);
  var peg$e23 = peg$literalExpectation("days", false);
  var peg$e24 = peg$literalExpectation("in", false);
  var peg$e25 = peg$classExpectation(["+", "-"], false, false);
  var peg$e26 = peg$literalExpectation("as", false);
  var peg$e27 = peg$literalExpectation("next", false);
  var peg$e28 = peg$literalExpectation("previous", false);
  var peg$e29 = peg$literalExpectation("prev", false);
  var peg$e30 = peg$literalExpectation("at", false);
  var peg$e31 = peg$literalExpectation("using", false);
  var peg$e32 = peg$literalExpectation("weekday", false);
  var peg$e33 = peg$literalExpectation("weekend", false);
  var peg$e34 = peg$literalExpectation("Mon", false);
  var peg$e35 = peg$literalExpectation("Tue", false);
  var peg$e36 = peg$literalExpectation("Wed", false);
  var peg$e37 = peg$literalExpectation("Thu", false);
  var peg$e38 = peg$literalExpectation("Fri", false);
  var peg$e39 = peg$literalExpectation("Sat", false);
  var peg$e40 = peg$literalExpectation("Sun", false);
  var peg$e41 = peg$literalExpectation("Monday", false);
  var peg$e42 = peg$literalExpectation("Tuesday", false);
  var peg$e43 = peg$literalExpectation("Wednesday", false);
  var peg$e44 = peg$literalExpectation("Thursday", false);
  var peg$e45 = peg$literalExpectation("Friday", false);
  var peg$e46 = peg$literalExpectation("Saturday", false);
  var peg$e47 = peg$literalExpectation("Sunday", false);
  var peg$e48 = peg$literalExpectation("second", false);
  var peg$e49 = peg$literalExpectation("seconds", false);
  var peg$e50 = peg$literalExpectation("minute", false);
  var peg$e51 = peg$literalExpectation("minutes", false);
  var peg$e52 = peg$literalExpectation("hour", false);
  var peg$e53 = peg$literalExpectation("hours", false);
  var peg$e54 = peg$literalExpectation("day", false);
  var peg$e55 = peg$literalExpectation("week", false);
  var peg$e56 = peg$literalExpectation("weeks", false);
  var peg$e57 = peg$literalExpectation("month", false);
  var peg$e58 = peg$literalExpectation("months", false);
  var peg$e59 = peg$literalExpectation("year", false);
  var peg$e60 = peg$literalExpectation("years", false);
  var peg$e61 = peg$literalExpectation("clamp", false);
  var peg$e62 = peg$literalExpectation("roll", false);
  var peg$e63 = peg$literalExpectation("strict", false);
  var peg$e64 = peg$literalExpectation("ms", false);
  var peg$e65 = peg$literalExpectation("s", false);
  var peg$e66 = peg$literalExpectation("mo", false);
  var peg$e67 = peg$classExpectation(["d", "h", "m", "w", "y"], false, false);
  var peg$e68 = peg$literalExpectation(":", false);
  var peg$e69 = peg$literalExpectation("10", false);
  var peg$e70 = peg$literalExpectation("11", false);
  var peg$e71 = peg$literalExpectation("12", false);
  var peg$e72 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e73 = peg$literalExpectation("am", true);
  var peg$e74 = peg$literalExpectation("pm", true);

  var peg$f0 = function(e) { return e; };
  var peg$f1 = function(digits) { return parseInt(digits.join(""), 10); };
  var peg$f2 = function(d) { return d.join(""); };
  var peg$f3 = function(chars) { return chars.join(""); };
  var peg$f4 = function(chars) { return chars.join(""); };
  var peg$f5 = function() { return "\""; };
  var peg$f6 = function() { return "\n"; };
  var peg$f7 = function() { return "\t"; };
  var peg$f8 = function() { return "\\"; };
  var peg$f9 = function(c) { return c[1]; };
  var peg$f10 = function() { return "'"; };
  var peg$f11 = function() { return "\n"; };
  var peg$f12 = function() { return "\t"; };
  var peg$f13 = function() { return "\\"; };
  var peg$f14 = function(c) { return c[1]; };
  var peg$f15 = function(dt, r) {
      return node("Within", { value: dt, range: r });
    };
  var peg$f16 = function(a, b) {
      return node("DateRange", { start: a, end: b });
    };
  var peg$f17 = function(head, tail) {
      const steps = tail.map(t => t[1]);
      return node("DateTimeExpr", { head, steps });
    };
  var peg$f18 = function(s) { return node("Literal", { kind: "string", value: s }); };
  var peg$f19 = function(e) { return e; };
  var peg$f20 = function() { return node("Now", {}); };
  var peg$f21 = function() { return node("Today", {}); };
  var peg$f22 = function() { return node("Tomorrow", {}); };
  var peg$f23 = function() { return node("Yesterday", {}); };
  var peg$f24 = function(r) { return r; };
  var peg$f25 = function(r) {
      return node("RangeStart", { range: r });
    };
  var peg$f26 = function(r) {
      return node("RangeEnd", { range: r });
    };
  var peg$f27 = function(r) {
      return node("RangeDays", { range: r });
    };
  var peg$f28 = function(op, d) {
      return node("AddSub", { op, duration: d });
    };
  var peg$f29 = function(tz) {
      return node("InTZ", { tz });
    };
  var peg$f30 = function(fmt) {
      return node("AsFormat", { format: fmt });
    };
  var peg$f31 = function(se, u) {
      return node("Boundary", { which: se, unit: u });
    };
  var peg$f32 = function(np, w) {
      return node("NextPrev", { which: (np === "prev" ? "previous" : np), target: w });
    };
  var peg$f33 = function(t) {
      return node("AtTime", { time: t });
    };
  var peg$f34 = function(m) {
      return node("UsingMode", { mode: m });
    };
  var peg$f35 = function() { return node("WeekTarget", { kind: "weekday" }); };
  var peg$f36 = function() { return node("WeekTarget", { kind: "weekend" }); };
  var peg$f37 = function(w) {
      return node("WeekTarget", { kind: "weekdayName", value: w });
    };
  var peg$f38 = function(u) {
      const map = {
        second:"s", seconds:"s",
        minute:"m", minutes:"m",
        hour:"h", hours:"h",
        day:"d", days:"d",
        week:"w", weeks:"w",
        month:"mo", months:"mo",
        year:"y", years:"y",
      };
      return node("Unit", { raw: u, norm: map[u] || u });
    };
  var peg$f39 = function(m) { return m; };
  var peg$f40 = function(first, rest) {
      return node("Duration", { parts: [first, ...rest.map(x => x[1])] });
    };
  var peg$f41 = function(n, unit) {
      return node("DurationPart", { value: n, unit });
    };
  var peg$f42 = function(u) { return u; };
  var peg$f43 = function(n, u) {
      return node("DurationPart", { value: n, unit: u.norm });
    };
  var peg$f44 = function(hh, mm, ss) {
      const H = parseInt(hh, 10);
      const M = parseInt(mm, 10);
      const S = ss ? parseInt(ss[1], 10) : 0;

      if (H > 23) throw new Error("24h time hour must be 00..23");
      if (M > 59) throw new Error("minutes must be 00..59");
      if (S > 59) throw new Error("seconds must be 00..59");

      return node("Time", { clock: 24, hh: H, mm: M, ss: S });
    };
  var peg$f45 = function(h, mm, ss, mer) {
      const H12 = parseInt(h, 10);
      const M = parseInt(mm, 10);
      const S = ss ? parseInt(ss[1], 10) : 0;

      if (M > 59) throw new Error("minutes must be 00..59");
      if (S > 59) throw new Error("seconds must be 00..59");

      let H24 = H12 % 12;
      if (mer === "PM") H24 += 12;

      return node("Time", {
        clock: 12,
        hh: H24,
        mm: M,
        ss: S,
        meridiem: mer,
        inputHour: H12
      });
    };
  var peg$f46 = function() { return "10"; };
  var peg$f47 = function() { return "11"; };
  var peg$f48 = function() { return "12"; };
  var peg$f49 = function(d) { return d; };
  var peg$f50 = function(m) { return m.toUpperCase(); };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseExpr();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parse_() {
    var s0, s1;

    s0 = [];
    if (input.charCodeAt(peg$currPos) === 32) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      if (input.charCodeAt(peg$currPos) === 32) {
        s1 = peg$c0;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
    }

    return s0;
  }

  function peg$parseIdentChar() {
    var s0;

    s0 = input.charAt(peg$currPos);
    if (peg$r0.test(s0)) {
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }

    return s0;
  }

  function peg$parseDOTS() {
    var s0;

    if (input.substr(peg$currPos, 2) === peg$c1) {
      s0 = peg$c1;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }

    return s0;
  }

  function peg$parseInt() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = input.charAt(peg$currPos);
    if (peg$r1.test(s2)) {
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = input.charAt(peg$currPos);
        if (peg$r1.test(s2)) {
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseTwoDigits() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = input.charAt(peg$currPos);
    if (peg$r1.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = input.charAt(peg$currPos);
      if (peg$r1.test(s2)) {
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f2(s1);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStringLiteral() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 34) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseDoubleQuotedChar();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseDoubleQuotedChar();
      }
      if (input.charCodeAt(peg$currPos) === 34) {
        s3 = peg$c2;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f3(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 39) {
        s1 = peg$c3;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseSingleQuotedChar();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseSingleQuotedChar();
        }
        if (input.charCodeAt(peg$currPos) === 39) {
          s3 = peg$c3;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f4(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseDoubleQuotedChar() {
    var s0, s1, s2, s3;
